# rustraytracer

./: .gitignore  Cargo.toml  README.md
derive_entity/: Cargo.toml
derive_entity/src/: lib.rs
src/: common.rs  lighting.rs  main.rs  material.rs  tracer.rs
src/behavior/: cubemap.rs  lambert.rs  mod.rs  phong.rs  reflection.rs
src/geometry/: aabb.rs  kdtree.rs  mod.rs  model.rs  scene.rs  sphere.rs  triangle.rs
