[package]
name = "raytracer"
version = "0.1.0"
authors = ["Rishabh Bector <bector.rishabh@gmail.com>", "Leo Orshansky <leoorshansky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
image = "0.23.10"
cgmath = "0.17.0"
obj-rs = "0.6"
anyhow = "1.0"
pbr = "1.0.4"
derive_entity = { path = "derive_entity" }

